--- a/src/main/webapp/assets/css/gallery.css
+++ b/src/main/webapp/assets/css/gallery.css
@@ -178,3 +178,36 @@
 	float: right;
 }
 
+/* 모달css */
+.modal {
+	width: 100%; /* 가로전체 */
+	height: 100%; /* 세로전체 */
+	display: none; /* 시작할때 숨김처리 */
+	position: fixed; /* 화면에 고정 */
+	left: 0; /* 왼쪽에서 0에서 시작 */
+	top: 0; /* 위쪽에서 0에서 시작 */
+	z-index: 999; /* 제일위에 */
+	overflow: auto; /* 내용이 많으면 스크롤 생김 */
+	background-color: rgba(0, 0, 0, 0.4); /* 배경이 검정색에 반투명 */
+}
+/* 모달창 내용 흰색부분 */
+.modal .modal-content {
+	width: 600px;
+	margin: 100px auto; /* 상하100ㅔㅌ, 좌우 가운데 */
+	padding: 0px 20px 20px 20px;
+	background-color: white; /* 배경색 흰색 */
+	border: 1px solid #888888; /* 테두리 모양 색 */
+}
+
+/* 닫기 버튼 */
+.modal .modal-content .closeBtn {
+	text-align: right;
+	color: #aaaaaa;
+	font-size: 28px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+
+
+
