--- a/src/main/webapp/assets/css/mysite.css
+++ b/src/main/webapp/assets/css/mysite.css
@@ -57,7 +57,7 @@ a:hover {text-decoration: none; color: #000000; }
 
 /****************** 공통 ************************/
 /* clearfix */
-.clearfix{*zoom:1;}
+.clearfix{zoom:1;}
 .clearfix:before, .clearfix:after {display: block; content: ""; line-height: 0;}
 .clearfix:after {clear: both;}
 
